--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@ngrx/store-devtools": "github:ngrx/store-devtools-builds",
     "angularfire2": "^5.0.0-rc.11",
     "bootstrap": "^4.1.1",
+    "chart.js": "^2.8.0",
     "core-js": "^2.5.4",
     "firebase": "^5.1.0",
+    "ng2-charts": "^2.2.2",
     "ngx-spinner": "^7.1.1",
     "rxjs": "^6.4.0",
     "sweetalert2": "^7.24.1",
